--- a/style.css
+++ b/style.css
@@ -2,6 +2,27 @@ nav {
     height: 150px;
 }
 
-.card-title{
-    background-color: rgba(0,0,0,0.75);
+.card-title {
+    background-color: rgba(0, 0, 0, 0.75);
 }
+
+.recipe-card {
+    border: 5px solid black;
+}
+
+
+/*the recipe card/div*/
+
+.card-image {}
+
+.card-title {}
+
+
+/*ingredients*/
+
+.card-content {}
+
+
+/*link/URL*/
+
+.card-action {}
