--- a/style2.css
+++ b/style2.css
@@ -12,7 +12,7 @@ body {
 }
 
 #showcase {
-    background-image: url("../assets/fruits.jpg");
+    background-image: url("./assets/fruits.jpg");
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -22,6 +22,7 @@ h1 {
     text-align: center;
     background-color: black;
     color: white;
+    margin: 0;
 }
 
 a {
