--- a/style2.css
+++ b/style2.css
@@ -23,11 +23,19 @@ h1 {
     background-color: black;
     color: white;
     margin: 0;
-    height: 200px;
+    height: 100px;
+}
+
+.food{
+    font-family: 'Dancing Script', cursive;
 }
 
 h4{
     color: white;
+    background-color: black;
+    text-align: center;
+    margin-top:auto;
+    font-family: 'Dancing Script', cursive;
 }
 
 a {
